# digitizer

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  GIT_SETUP.md  LICENSE  README.md  init_git.sh  main.cpp  setup.sh
configs/: DS_LYSO.conf  default.conf  energy_points.txt  test.conf
docs/: USAGE.md
include/: ADCDigitizer.h  DetectorParameters.h  DigitizationBase.h  DigitizationManager.h  ScintillationDigitizer.h  SiPMDigitizer.h  TotalDigitizer.h
scripts/: plot_results.C
src/: ADCDigitizer.cpp  DetectorParameters.cpp  DigitizationBase.cpp  DigitizationManager.cpp  ScintillationDigitizer.cpp  SiPMDigitizer.cpp  TotalDigitizer.cpp
